--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     <a href="world-lore.html" class="nav-item px-3 py-2 hover:text-blue-400 transition">世界观</a>
                     <a href="story/index.html" class="nav-item px-3 py-2 hover:text-blue-400 transition">故事剧情</a>
                     <a href="game/index.html" class="nav-item px-3 py-2 hover:text-green-400 transition">游戏原型</a>
+                    <a href="terrain/index.html" class="nav-item px-3 py-2 hover:text-yellow-400 transition">地形图</a>
                     <a href="#factions" class="nav-item px-3 py-2 hover:text-blue-400 transition">种族介绍</a>
                     <a href="#tech-tree" class="nav-item px-3 py-2 hover:text-blue-400 transition">科技树</a>
                     <a href="#skills" class="nav-item px-3 py-2 hover:text-blue-400 transition">技能系统</a>
@@ -174,6 +175,9 @@
                 </a>
                 <a href="game-modes.html" class="px-8 py-4 border border-purple-500/50 rounded-full font-semibold hover:bg-purple-500/20 transition duration-300 inline-flex items-center justify-center">
                     <i class="fas fa-trophy mr-2"></i>游戏模式
+                </a>
+                <a href="terrain/index.html" class="px-8 py-4 border border-yellow-500/50 rounded-full font-semibold hover:bg-yellow-500/20 transition duration-300 inline-flex items-center justify-center">
+                    <i class="fas fa-map mr-2"></i>地形图
                 </a>
                 <a href="story/media-resources.html" class="px-8 py-4 border border-pink-500/50 rounded-full font-semibold hover:bg-pink-500/20 transition duration-300 inline-flex items-center justify-center">
                     <i class="fas fa-palette mr-2"></i>媒体资源
@@ -231,7 +235,7 @@
             </div>
             
             <!-- 世界观、故事与游戏卡片 -->
-            <div class="grid md:grid-cols-3 gap-8 mb-16">
+            <div class="grid md:grid-cols-4 gap-8 mb-16">
                 <a href="game/index.html" class="bg-gray-800/50 backdrop-blur-sm rounded-xl p-8 border border-gray-700 hover:border-green-500 transition duration-300 block">
                     <div class="flex items-start space-x-6">
                         <div class="w-16 h-16 bg-gradient-to-br from-green-500 to-emerald-600 rounded-full flex items-center justify-center flex-shrink-0">
@@ -288,6 +292,29 @@
                             <div class="inline-flex items-center text-cyan-400 hover:text-cyan-300 transition">
                                 <span>开始阅读</span>
                                 <i class="fas fa-arrow-right ml-2"></i>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                
+                <a href="terrain/index.html" class="bg-gray-800/50 backdrop-blur-sm rounded-xl p-8 border border-gray-700 hover:border-yellow-500 transition duration-300 block">
+                    <div class="flex items-start space-x-6">
+                        <div class="w-16 h-16 bg-gradient-to-br from-yellow-500 to-orange-600 rounded-full flex items-center justify-center flex-shrink-0">
+                            <i class="fas fa-map text-2xl"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-semibold mb-4">世界地形图</h3>
+                            <p class="text-gray-400 mb-4">
+                                探索几何境域的五大主城地形图，了解各地独特的地理特征、
+                                种族优势和战略要点，为你的征服之路做好规划。
+                            </p>
+                            <div class="inline-flex items-center text-yellow-400 hover:text-yellow-300 transition">
+                                <span>查看地形</span>
+                                <i class="fas fa-arrow-right ml-2"></i>
+                            </div>
+                            <div class="mt-2 text-xs text-gray-500">
+                                <i class="fas fa-info-circle mr-1"></i>
+                                包含5个主要城市详细地形
                             </div>
                         </div>
                     </div>
@@ -1749,6 +1776,7 @@
                     <ul class="space-y-2 text-sm text-gray-400">
                         <li><a href="game/index.html" class="hover:text-white transition">游戏原型体验</a></li>
                         <li><a href="game-modes.html" class="hover:text-white transition">游戏模式介绍</a></li>
+                        <li><a href="terrain/index.html" class="hover:text-white transition">世界地形图</a></li>
                         <li><a href="story/media-resources.html" class="hover:text-white transition">媒体资源</a></li>
                         <li><a href="story/timeline.html" class="hover:text-white transition">历史时间线</a></li>
                     </ul>
