--- a/terrain/index.html
+++ b/terrain/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>地形图索引 - 几何境域：形态之战</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @keyframes float {
             0%, 100% { transform: translateY(0px); }
@@ -70,24 +71,94 @@
     </style>
 </head>
 <body class="bg-gradient-to-br from-slate-50 via-gray-50 to-slate-100 min-h-screen">
-    <!-- Navigation -->
-    <nav class="bg-gray-900/90 backdrop-blur-sm border-b border-gray-700 sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-3">
-            <div class="flex items-center justify-between">
-                <div class="flex items-center space-x-2">
-                    <span class="text-2xl">🗺️</span>
-                    <h1 class="text-xl font-bold text-gray-100">几何境域地形图索引</h1>
+    <!-- 导航栏 -->
+    <nav class="fixed top-0 w-full bg-gray-800/90 backdrop-blur-md z-50 border-b border-gray-700">
+        <div class="container mx-auto px-4">
+            <div class="flex items-center justify-between h-16">
+                <!-- Logo区域 -->
+                <div class="flex items-center space-x-3">
+                    <a href="../index.html" class="flex items-center space-x-2 hover:text-blue-400 transition">
+                        <i class="fas fa-arrow-left text-gray-400"></i>
+                    </a>
+                    <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center rotate-animation">
+                        <i class="fas fa-map text-white"></i>
+                    </div>
+                    <span class="text-xl font-bold bg-gradient-to-r from-blue-400 to-purple-600 bg-clip-text text-transparent">
+                        地形图
+                    </span>
                 </div>
-                <div class="flex items-center space-x-6">
-                    <a href="../index.html" class="text-gray-300 hover:text-gray-100 transition">返回首页</a>
-                    <a href="../game/index.html" class="text-gray-300 hover:text-gray-100 transition">游戏体验</a>
+
+                <!-- 桌面导航 -->
+                <div class="hidden md:flex items-center space-x-1">
+                    <!-- 快速访问 -->
+                    <a href="../index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                        <i class="fas fa-home text-blue-400"></i>
+                        <span>游戏主页</span>
+                    </a>
+                    <a href="../world-lore.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                        <i class="fas fa-globe text-purple-400"></i>
+                        <span>世界观</span>
+                    </a>
+                    <a href="../story/index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                        <i class="fas fa-book text-green-400"></i>
+                        <span>故事剧情</span>
+                    </a>
+                    <a href="../game/index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                        <i class="fas fa-gamepad text-yellow-400"></i>
+                        <span>游戏原型</span>
+                    </a>
+                    <a href="#" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2 bg-gray-700/30">
+                        <i class="fas fa-map text-orange-400"></i>
+                        <span>地形图</span>
+                    </a>
+
+                    <!-- 页内导航 -->
+                    <div class="border-l border-gray-600 mx-2"></div>
+                    <button onclick="filterCategory('all')" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition text-sm">全部地形</button>
+                    <button onclick="filterCategory('capital')" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition text-sm">主要城市</button>
+                    <button onclick="filterCategory('battle')" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition text-sm">战斗地图</button>
+
+                    <!-- 更多下拉菜单 -->
+                    <div class="relative group">
+                        <button class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-1 text-sm">
+                            <span>更多</span>
+                            <i class="fas fa-chevron-down text-xs mt-0.5"></i>
+                        </button>
+                        <div class="absolute right-0 mt-2 w-48 bg-gray-800 rounded-md shadow-lg border border-gray-700 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
+                            <button onclick="filterCategory('terrain')" class="block w-full text-left px-4 py-2 hover:bg-gray-700 transition text-sm">地形特点</button>
+                            <button onclick="filterCategory('race')" class="block w-full text-left px-4 py-2 hover:bg-gray-700 transition text-sm">种族优势</button>
+                            <a href="battle-map-todolist.md" class="block px-4 py-2 hover:bg-gray-700 transition text-sm">战斗地图进度</a>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- 移动端菜单按钮 -->
+                <button id="mobile-menu-btn" class="md:hidden p-2 rounded-md hover:bg-gray-700">
+                    <i class="fas fa-bars text-xl"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- 移动端菜单 -->
+        <div id="mobile-menu" class="hidden md:hidden bg-gray-800 border-t border-gray-700">
+            <div class="px-4 py-2 space-y-1">
+                <a href="../index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">游戏主页</a>
+                <a href="../world-lore.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">世界观</a>
+                <a href="../story/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">故事剧情</a>
+                <a href="../game/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">游戏原型</a>
+                <a href="#" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition bg-gray-700">地形图</a>
+                <button onclick="filterCategory('all')" class="block w-full text-left px-3 py-2 rounded-md hover:bg-gray-700 transition">全部地形</button>
+                <button onclick="filterCategory('capital')" class="block w-full text-left px-3 py-2 rounded-md hover:bg-gray-700 transition">主要城市</button>
+                <button onclick="filterCategory('battle')" class="block w-full text-left px-3 py-2 rounded-md hover:bg-gray-700 transition">战斗地图</button>
+                <button onclick="filterCategory('terrain')" class="block w-full text-left px-3 py-2 rounded-md hover:bg-gray-700 transition">地形特点</button>
+                <button onclick="filterCategory('race')" class="block w-full text-left px-3 py-2 rounded-md hover:bg-gray-700 transition">种族优势</button>
+                <a href="battle-map-todolist.md" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">战斗地图进度</a>
             </div>
         </div>
     </nav>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-8">
+    <main class="container mx-auto px-4 pt-24 pb-8">
         <!-- Header -->
         <div class="text-center mb-12">
             <h1 class="text-5xl font-bold text-gray-900 mb-4">世界地形图集</h1>
@@ -843,6 +914,14 @@
                     card.style.opacity = '1';
                     card.style.transform = 'translateY(0)';
                 }, index * 100);
+            });
+
+            // 移动端菜单
+            const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+            const mobileMenu = document.getElementById('mobile-menu');
+
+            mobileMenuBtn.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
             });
         });
     </script>
