refactor: 重构底部 footer 取出 关于项目 栏目

--- a/terrain/index.html
+++ b/terrain/index.html
@@ -162,6 +162,10 @@
         <!-- Header -->
         <div class="text-center mb-12">
             <h1 class="text-5xl font-bold text-gray-900 mb-4">世界地形图集</h1>
+                    </ul>
+                </div>
+                
+                <!-- 种族阵营 -->/g
             <p class="text-xl text-gray-600 mb-6">探索几何境域的壮丽地形，了解各区域的战略价值</p>
             
             <!-- Statistics -->
