feat: 完善种族介绍

--- a/index.html
+++ b/index.html
@@ -463,6 +463,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="mt-8">
+                                <a href="races/circle-clan.html" class="inline-flex items-center px-6 py-3 bg-blue-500 hover:bg-blue-600 rounded-lg transition text-white font-semibold">
+                                    <span>了解圆环族详情</span>
+                                    <i class="fas fa-arrow-right ml-2"></i>
+                                </a>
+                            </div>
                         </div>
                         <div class="relative">
                             <div class="bg-gradient-to-br from-blue-500/20 to-purple-500/20 rounded-2xl p-8 text-center">
@@ -514,6 +520,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="mt-8">
+                                <a href="races/triangle-council.html" class="inline-flex items-center px-6 py-3 bg-purple-500 hover:bg-purple-600 rounded-lg transition text-white font-semibold">
+                                    <span>了解三角议会详情</span>
+                                    <i class="fas fa-arrow-right ml-2"></i>
+                                </a>
+                            </div>
                         </div>
                         <div class="relative">
                             <div class="bg-gradient-to-br from-purple-500/20 to-pink-500/20 rounded-2xl p-8 text-center">
@@ -564,6 +576,12 @@
                                         <p class="text-gray-400">方尖碑、矩阵阵列、研究所</p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="mt-8">
+                                <a href="races/square-obelisk.html" class="inline-flex items-center px-6 py-3 bg-cyan-500 hover:bg-cyan-600 rounded-lg transition text-white font-semibold">
+                                    <span>了解方碑盟约详情</span>
+                                    <i class="fas fa-arrow-right ml-2"></i>
+                                </a>
                             </div>
                         </div>
                         <div class="relative">
@@ -626,6 +644,12 @@
                                         <p class="text-gray-400">生命核心、螺旋花园、进化腔室</p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="mt-8">
+                                <a href="races/spiral-offspring.html" class="inline-flex items-center px-6 py-3 bg-green-500 hover:bg-green-600 rounded-lg transition text-white font-semibold">
+                                    <span>了解螺旋之子详情</span>
+                                    <i class="fas fa-arrow-right ml-2"></i>
+                                </a>
                             </div>
                         </div>
                         <div class="relative">
@@ -1833,6 +1857,7 @@
                         <li><a href="game/index.html" class="hover:text-white transition">游戏原型体验</a></li>
                         <li><a href="game-modes.html" class="hover:text-white transition">游戏模式介绍</a></li>
                         <li><a href="terrain/index.html" class="hover:text-white transition">世界地形图</a></li>
+                        <li><a href="races/index.html" class="hover:text-white transition">种族阵营介绍</a></li>
                     </ul>
                 </div>
                 
@@ -1840,10 +1865,10 @@
                 <div>
                     <h4 class="font-semibold mb-4 text-green-400">种族阵营</h4>
                     <ul class="space-y-2 text-sm text-gray-400">
-                        <li><a href="#" class="hover:text-white transition">圆环族 - 和谐与循环</a></li>
-                        <li><a href="#" class="hover:text-white transition">三角议会 - 力量与效率</a></li>
-                        <li><a href="#" class="hover:text-white transition">方碑盟约 - 秩序与规则</a></li>
-                        <li><a href="#" class="hover:text-white transition">螺旋之子 - 变化与成长</a></li>
+                        <li><a href="races/circle-clan.html" class="hover:text-white transition">圆环族 - 和谐与循环</a></li>
+                        <li><a href="races/triangle-council.html" class="hover:text-white transition">三角议会 - 力量与效率</a></li>
+                        <li><a href="races/square-obelisk.html" class="hover:text-white transition">方碑盟约 - 秩序与规则</a></li>
+                        <li><a href="races/spiral-offspring.html" class="hover:text-white transition">螺旋之子 - 变化与成长</a></li>
                     </ul>
                 </div>
             </div>
