--- a/terrain/central-ring-city.html
+++ b/terrain/central-ring-city.html
@@ -167,7 +167,7 @@
                         <h1 class="text-4xl md:text-5xl font-bold mb-4">
                             <span class="gradient-text">中央圆环城地形图</span>
                         </h1>
-                        <p class="text-xl text-gray-300">圆环族的首都，和谐与循环的象征</p>
+                        <p class="text-xl text-gray-300"><a href="../races/circle-clan.html" class="text-blue-400 hover:text-blue-300 transition">圆环族</a>的首都，和谐与循环的象征</p>
                     </div>
                     <div class="hidden md:flex items-center space-x-4">
                         <div class="text-center">
@@ -305,7 +305,7 @@
                             
                             <!-- 种族优势 -->
                             <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
-                                <h3 class="text-lg font-bold mb-4 text-blue-400">圆环族优势</h3>
+                                <h3 class="text-lg font-bold mb-4 text-blue-400"><a href="../races/circle-clan.html" class="hover:text-blue-300 transition">圆环族</a>优势</h3>
                                 <div class="space-y-2 text-sm">
                                     <div class="flex justify-between">
                                         <span class="text-gray-400">移动速度</span>
