--- a/terrain/life-spiral-city-battle.html
+++ b/terrain/life-spiral-city-battle.html
@@ -498,7 +498,7 @@
                     <h3 class="text-lg font-semibold mb-3">种族优势</h3>
                     <div class="space-y-2 text-sm">
                         <div class="p-2 bg-green-900/30 rounded">
-                            <span class="text-green-400 font-semibold">螺旋之子</span>
+                            <span class="text-green-400 font-semibold"><a href="races/spiral-offspring.html" class="hover:text-green-400-300 transition">螺旋之子</a></span>
                             <p class="text-gray-300 text-xs mt-1">森林移动 +40%</p>
                         </div>
                         <div class="p-2 bg-emerald-900/30 rounded">
