--- a/terrain/life-spiral-city.html
+++ b/terrain/life-spiral-city.html
@@ -303,7 +303,7 @@
         <!-- Racial Advantages -->
         <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6">
             <div class="bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl p-6">
-                <h3 class="text-lg font-bold text-green-900 mb-3">🟢 圆形种族优势</h3>
+                <h3 class="text-lg font-bold text-green-900 mb-3">🟢 <a href="../races/spiral-offspring.html" class="hover:text-green-700 transition">螺旋之子</a>优势</h3>
                 <ul class="space-y-2 text-sm text-green-800">
                     <li>• 生命花园治疗效果 +50%</li>
                     <li>• 藤蔓网络移动速度 +30%</li>
