--- a/terrain/matrix-city-battle.html
+++ b/terrain/matrix-city-battle.html
@@ -490,7 +490,7 @@
                     <h3 class="text-lg font-semibold mb-3">种族优势</h3>
                     <div class="space-y-2 text-sm">
                         <div class="p-2 bg-blue-900/30 rounded">
-                            <span class="text-blue-400 font-semibold">方碑盟约</span>
+                            <span class="text-blue-400 font-semibold"><a href="races/square-obelisk.html" class="hover:text-blue-400-300 transition">方碑盟约</a></span>
                             <p class="text-gray-300 text-xs mt-1">建造速度 +50%</p>
                         </div>
                         <div class="p-2 bg-purple-900/30 rounded">
