--- a/terrain/matrix-city.html
+++ b/terrain/matrix-city.html
@@ -192,7 +192,7 @@
                         <h1 class="text-4xl md:text-5xl font-bold mb-4">
                             <span class="gradient-text">矩阵之都地形图</span>
                         </h1>
-                        <p class="text-xl text-gray-300">方碑盟约的技术中心，秩序与规则的象征</p>
+                        <p class="text-xl text-gray-300"><a href="../races/square-obelisk.html" class="text-purple-400 hover:text-purple-300 transition">方碑盟约</a>的技术中心，秩序与规则的象征</p>
                     </div>
                     <div class="hidden md:flex items-center space-x-4">
                         <div class="text-center">
@@ -378,7 +378,7 @@
                             
                             <!-- 种族优势 -->
                             <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
-                                <h3 class="text-lg font-bold mb-4 text-cyan-400">方碑盟约优势</h3>
+                                <h3 class="text-lg font-bold mb-4 text-cyan-400"><a href="../races/square-obelisk.html" class="hover:text-cyan-300 transition">方碑盟约</a>优势</h3>
                                 <div class="space-y-2 text-sm">
                                     <div class="flex justify-between">
                                         <span class="text-gray-400">建筑成本</span>
