--- a/terrain/triangle-spires-battle.html
+++ b/terrain/triangle-spires-battle.html
@@ -368,19 +368,19 @@
                     <h3 class="text-lg font-semibold mb-3">种族优势</h3>
                     <div class="space-y-2 text-sm">
                         <div class="p-2 bg-yellow-900/30 rounded">
-                            <span class="text-yellow-400 font-semibold">三角议会</span>
+                            <span class="text-yellow-400 font-semibold"><a href="../races/triangle-council.html" class="hover:text-yellow-300 transition">三角议会</a></span>
                             <p class="text-gray-300 text-xs mt-1">移动速度 +30%</p>
                         </div>
                         <div class="p-2 bg-blue-900/30 rounded">
-                            <span class="text-blue-400 font-semibold">圆环族</span>
+                            <span class="text-blue-400 font-semibold"><a href="../races/circle-clan.html" class="hover:text-blue-300 transition">圆环族</a></span>
                             <p class="text-gray-300 text-xs mt-1">晶格墙伤害减免</p>
                         </div>
                         <div class="p-2 bg-green-900/30 rounded">
-                            <span class="text-green-400 font-semibold">螺旋之子</span>
+                            <span class="text-green-400 font-semibold"><a href="../races/spiral-offspring.html" class="hover:text-green-300 transition">螺旋之子</a></span>
                             <p class="text-gray-300 text-xs mt-1">山区视野 +20%</p>
                         </div>
                         <div class="p-2 bg-purple-900/30 rounded">
-                            <span class="text-purple-400 font-semibold">方碑盟约</span>
+                            <span class="text-purple-400 font-semibold"><a href="../races/square-obelisk.html" class="hover:text-purple-300 transition">方碑盟约</a></span>
                             <p class="text-gray-300 text-xs mt-1">建造速度 +15%</p>
                         </div>
                     </div>
