--- a/terrain/triangle-spires.html
+++ b/terrain/triangle-spires.html
@@ -171,7 +171,7 @@
                         <h1 class="text-4xl md:text-5xl font-bold mb-4">
                             <span class="gradient-text">三角尖塔地形图</span>
                         </h1>
-                        <p class="text-xl text-gray-300">三角议会的军事要塞，力量与效率的象征</p>
+                        <p class="text-xl text-gray-300"><a href="../races/triangle-council.html" class="text-red-400 hover:text-red-300 transition">三角议会</a>的军事要塞，力量与效率的象征</p>
                     </div>
                     <div class="hidden md:flex items-center space-x-4">
                         <div class="text-center">
@@ -329,7 +329,7 @@
                             
                             <!-- 种族优势 -->
                             <div class="bg-gray-800/50 rounded-xl p-6 border border-gray-700">
-                                <h3 class="text-lg font-bold mb-4 text-purple-400">三角议会优势</h3>
+                                <h3 class="text-lg font-bold mb-4 text-purple-400"><a href="../races/triangle-council.html" class="hover:text-purple-300 transition">三角议会</a>优势</h3>
                                 <div class="space-y-2 text-sm">
                                     <div class="flex justify-between">
                                         <span class="text-gray-400">防御力</span>
