--- a/story/index.html
+++ b/story/index.html
@@ -751,10 +751,10 @@
                 <div>
                     <h4 class="font-semibold mb-4 text-green-400">种族阵营</h4>
                     <ul class="space-y-2 text-sm text-gray-400">
-                        <li><a href="#" class="hover:text-white transition">圆环族 - 和谐与循环</a></li>
-                        <li><a href="#" class="hover:text-white transition">三角议会 - 力量与效率</a></li>
-                        <li><a href="#" class="hover:text-white transition">方碑盟约 - 秩序与规则</a></li>
-                        <li><a href="#" class="hover:text-white transition">螺旋之子 - 变化与成长</a></li>
+                        <li><a href="../races/circle-clan.html" class="hover:text-white transition">圆环族 - 和谐与循环</a></li>
+                        <li><a href="../races/triangle-council.html" class="hover:text-white transition">三角议会 - 力量与效率</a></li>
+                        <li><a href="../races/square-obelisk.html" class="hover:text-white transition">方碑盟约 - 秩序与规则</a></li>
+                        <li><a href="../races/spiral-offspring.html" class="hover:text-white transition">螺旋之子 - 变化与成长</a></li>
                     </ul>
                 </div>
             </div>
