--- a/game/prototype-showcase.html
+++ b/game/prototype-showcase.html
@@ -120,7 +120,7 @@
             <!-- Project Overview -->
             <div class="bg-gray-800/50 backdrop-blur-sm rounded-2xl p-6 border border-gray-700">
                 <h2 class="text-2xl font-bold text-white mb-4">项目概览</h2>
-                <p class="text-gray-300 mb-6">几何境域：形态之战是一款基于HTML5 Canvas 2D的网页游戏，融合了几何美学与现代游戏设计理念。</p>
+                <p class="text-gray-300 mb-6">几何境域：形态之战是一款融合Canvas 2D和Three.js 3D技术的网页游戏，展现了几何美学的视觉冲击力与现代游戏设计的创新理念。</p>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-4 text-center">
                     <div>
                         <div class="text-3xl font-bold text-blue-400 mb-1"><i class="fas fa-shapes"></i></div>
@@ -237,6 +237,54 @@
                     <div class="flex space-x-2">
                         <a href="ui-concept.html" class="flex-1 bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg transition text-center">
                             <i class="fas fa-eye mr-2"></i>查看设计
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Three.js Effects Prototype -->
+            <div class="prototype-card bg-gray-800 rounded-2xl shadow-xl overflow-hidden border border-gray-700 relative">
+                <div class="status-badge">
+                    <span class="bg-green-600 text-white px-3 py-1 rounded-full text-xs">已完成</span>
+                </div>
+                <div class="h-48 bg-gradient-to-br from-indigo-600 via-blue-600 to-cyan-600 relative overflow-hidden">
+                    <div class="absolute inset-0 flex items-center justify-center">
+                        <div class="relative">
+                            <div class="w-24 h-24 border-4 border-white/20 rounded-full absolute animate-ping"></div>
+                            <div class="w-16 h-16 bg-white/10 rounded-full flex items-center justify-center">
+                                <i class="fas fa-cube text-3xl text-white/60 rotate-slow"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute bottom-4 left-4">
+                        <h3 class="text-2xl font-bold text-white">Three.js特效原型</h3>
+                    </div>
+                </div>
+                <div class="p-6">
+                    <p class="text-gray-300 mb-4">基于Three.js的3D特效系统，展示四大种族的视觉特效和交互式控制</p>
+                    
+                    <div class="space-y-2 mb-4">
+                        <div class="flex items-center text-sm text-gray-400">
+                            <i class="fas fa-check-circle text-green-400 mr-2"></i>
+                            四大种族特效系统
+                        </div>
+                        <div class="flex items-center text-sm text-gray-400">
+                            <i class="fas fa-check-circle text-green-400 mr-2"></i>
+                            粒子系统与后处理
+                        </div>
+                        <div class="flex items-center text-sm text-gray-400">
+                            <i class="fas fa-check-circle text-green-400 mr-2"></i>
+                            实时参数调节
+                        </div>
+                        <div class="flex items-center text-sm text-gray-400">
+                            <i class="fas fa-check-circle text-green-400 mr-2"></i>
+                            性能优化（2000+粒子）
+                        </div>
+                    </div>
+                    
+                    <div class="flex space-x-2">
+                        <a href="threejs-effects.html" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-lg transition text-center">
+                            <i class="fas fa-magic mr-2"></i>体验特效
                         </a>
                     </div>
                 </div>
@@ -431,7 +479,7 @@
         <section class="mt-16">
             <h2 class="text-3xl font-bold text-white mb-8 text-center">技术栈展示</h2>
             <div class="bg-gray-800/50 backdrop-blur-sm rounded-2xl p-8 border border-gray-700">
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="grid grid-cols-2 md:grid-cols-5 gap-6">
                     <div class="text-center">
                         <div class="w-20 h-20 bg-orange-500/20 rounded-full mx-auto mb-3 flex items-center justify-center">
                             <i class="fab fa-html5 text-3xl text-orange-500"></i>
@@ -452,6 +500,13 @@
                         </div>
                         <h3 class="font-bold text-white mb-1">Tailwind CSS</h3>
                         <p class="text-sm text-gray-400">响应式设计</p>
+                    </div>
+                    <div class="text-center">
+                        <div class="w-20 h-20 bg-indigo-500/20 rounded-full mx-auto mb-3 flex items-center justify-center">
+                            <i class="fas fa-cube text-3xl text-indigo-500"></i>
+                        </div>
+                        <h3 class="font-bold text-white mb-1">Three.js</h3>
+                        <p class="text-sm text-gray-400">3D渲染引擎</p>
                     </div>
                     <div class="text-center">
                         <div class="w-20 h-20 bg-green-500/20 rounded-full mx-auto mb-3 flex items-center justify-center">
