feat: 增加几个 threejs ui 特效 demo

--- a/game/prototype-showcase.html
+++ b/game/prototype-showcase.html
@@ -283,7 +283,7 @@
                     </div>
                     
                     <div class="flex space-x-2">
-                        <a href="threejs-effects.html" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-lg transition text-center">
+                        <a href="threejs-effects-hub.html" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-lg transition text-center">
                             <i class="fas fa-magic mr-2"></i>体验特效
                         </a>
                     </div>
